# GeoHealpix

./: MANIFEST.in  README.txt  dev_requirements.txt  dev_setup.py  pull_source.py  setup.py
cpp-sandbox/: CMakeLists.txt  README.txt  test.cc  test1.cc  test2.cc
docs/: conf.py  geohealpix.rst  index.rst  requirements.txt
src/: earth.cc  earth.h  geohealpix.cpp  geohealpix.pyx  healpix.h  msession.cc  msession.h
tests/: base.py  test_SearchEngine.py  test_bbox_search.py  test_grid.py  test_search_bbox.py  test_to_drop.py  utils.py
